# python-river

./: .gitignore  LICENSE  README.md  catchment-analysis.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
catchment/: compute_data.py  models.py  views.py
tests/: test_compute_data.py  test_models.py
