[tool.poetry]
name = "catchment"
version = "1.0.1"
description = "Analyse river catchment project data"
authors = ["Meredith Burke"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
